# taakverse

./: Cargo.toml
.github/workflows/: ci.yaml
misc/xdg-desktop/: taakverse.desktop
src/: disk.rs  main.rs  style.css
