[package]
name = "taakverse"
version = "0.0.0"
edition = "2021"

[dependencies]
dirs = "4.0"
gtk4 = { version = "0.4", features = ["v4_6"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: Enable uuid/fast-rng feature?
uuid = { version = "1.1", features = ["serde", "v4"] }
